--- a/less/index.less
+++ b/less/index.less
@@ -4,56 +4,228 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
 }
 
-html, body {
-    height: 100%;
+@import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
+// mixins
+.body-font {
+  font-family: "Raleway", sans-serif;
 }
+
+.flex-row {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+// variables
+@main-bg: #617073;
+
+html {
+  font-size: 62.5%;
+}
+
+html,
+body {
+  height: 100%;
+  .body-font();
+  background: #7a93ac;
+}
+
+.main-wrapper {
+  width: 70%;
+  background: @main-bg;
+  margin: 0 auto;
+}
+
+.nav-logo {
+  width: 100%;
+  background: #171a21;
+  .flex-row();
+  flex-direction: row-reverse;
+
+  img {
+    width: 100px;
+    height: 100px;
+  }
+
+  .nav {
+    .flex-row();
+    width: 40%;
+
+    a {
+      color: #fff;
+      text-decoration: none;
+      font-size: 1.7rem;
+    }
+
+    a:hover {
+      color: #daa520;
+    }
+  }
+}
+header {
+  height: 45vh;
+  width: 100%;
+
+  .quick-bio {
+    .flex-row();
+    flex-direction: row-reverse;
+    margin: 6% 10%;
+  }
+
+  p {
+    width: 50%;
+    font-size: 2rem;
+    line-height: 1.3;
+	}
+	
+	img {
+    width: 20%;
+    height: auto;
+    border-radius: 50%;
+	}
+
+	h1 {
+		font-size: 3rem;
+		margin-left: 18%;
+		margin-top: -5%;
+	}
+	
+}
+
+	
+	
+  
 
