--- a/less/index.less
+++ b/less/index.less
@@ -196,31 +196,27 @@ body {
   }
 }
 header {
+	.flex-row;
+	flex-direction: row-reverse;
   height: 45vh;
-  width: 100%;
-
-  .quick-bio {
-    .flex-row();
-    flex-direction: row-reverse;
-    margin: 6% 10%;
-  }
-
-  p {
-    width: 50%;
-    font-size: 2rem;
-    line-height: 1.3;
-	}
+	width: 100%;
 	
-	img {
-    width: 20%;
-    height: auto;
-    border-radius: 50%;
+	.quick-bio {
+		width: 50%;
+
+		p {
+			width: 100%;
+			font-size: 2rem;
+			line-height: 1.3;
+		}
+
 	}
 
-	h1 {
-		font-size: 3rem;
-		margin-left: 18%;
-		margin-top: -5%;
+	img {
+		width: 60%;
+		height: auto;
+		border: 1px solid #fff;
+		
 	}
 	
 }
