--- a/css/index.css
+++ b/css/index.css
@@ -143,6 +143,9 @@ table {
 .body-font {
   font-family: "Raleway", sans-serif;
 }
+.header-footer {
+  background: #171a21;
+}
 .flex-row {
   display: flex;
   justify-content: space-around;
@@ -184,6 +187,7 @@ body {
   color: #fff;
   text-decoration: none;
   font-size: 1.7rem;
+  margin: 0 auto;
 }
 .nav-logo .nav a:hover {
   color: #daa520;
@@ -193,8 +197,10 @@ header {
   justify-content: space-around;
   align-items: center;
   flex-direction: row-reverse;
-  height: 45vh;
-  width: 100%;
+  height: auto;
+  width: 90%;
+  border-bottom: 1px solid #fff;
+  margin: 0 auto;
 }
 header .quick-bio {
   width: 50%;
@@ -202,10 +208,106 @@ header .quick-bio {
 header .quick-bio p {
   width: 100%;
   font-size: 2rem;
-  line-height: 1.3;
+  line-height: 2;
+  padding-right: 6%;
 }
-header img {
+header .bio-img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+header .bio-img img {
   width: 60%;
   height: auto;
   border: 1px solid #fff;
+  margin: 10% auto 5%;
+}
+header .bio-img h1 {
+  font-size: 4rem;
+}
+header .bio-img h2 {
+  font-size: 2rem;
+  margin-bottom: 5%;
+}
+.goals {
+  font-size: 2rem;
+  line-height: 1.3;
+  width: 90%;
+  margin: 1% auto 0;
+  padding: 7%;
+  border-bottom: 1px solid #fff;
+}
+.goals a {
+  text-decoration: none;
+  color: #000;
+}
+.goals .button {
+  border: 1px solid #fff;
+  width: 25%;
+  text-align: center;
+  padding: 1% 0;
+  margin-top: 3%;
+}
+.skills-section {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  justify-content: space-between;
+  width: 90%;
+  margin: 1% auto 10%;
+  font-size: 2rem;
+  line-height: 1.4;
+  border-bottom: 1px solid #fff;
+  padding: 7%;
+}
+.skills-section .about-skills {
+  width: 50%;
+  padding-right: 6%;
+}
+.skills-section h2 {
+  font-size: 2.7rem;
+  margin-bottom: 2%;
+}
+.skills-section ul {
+  width: 50%;
+}
+.skills-section .flex-list ul,
+.skills-section li,
+.skills-section img {
+  display: inline;
+}
+.skills-section img {
+  width: 7%;
+  padding-left: 2%;
+}
+.work-history h2 {
+  font-size: 3rem;
+  margin: 0 auto 2%;
+  width: 80%;
+}
+.work-history table {
+  width: 80%;
+  margin: 0 auto 5%;
+  border-collapse: collapse;
+  font-size: 1.6rem;
+}
+.work-history td,
+.work-history th {
+  border: 1px solid #fff;
+  text-align: left;
+  padding: 3%;
+}
+.work-history tr:nth-child(even) {
+  background: #171a21;
+  color: #fff;
+}
+footer {
+  width: 100%;
+  background: #171a21;
+}
+footer p {
+  color: #fff;
+  padding: 5%;
+  text-align: center;
+  font-size: 1.5rem;
 }
