--- a/less/index.less
+++ b/less/index.less
@@ -143,6 +143,10 @@ table {
   font-family: "Raleway", sans-serif;
 }
 
+.header-footer {
+  background: #171a21;
+}
+
 .flex-row {
   display: flex;
   justify-content: space-around;
@@ -151,6 +155,7 @@ table {
 
 // variables
 @main-bg: #617073;
+@font-color: #fff;
 
 html {
   font-size: 62.5%;
@@ -171,7 +176,7 @@ body {
 
 .nav-logo {
   width: 100%;
-  background: #171a21;
+  .header-footer();
   .flex-row();
   flex-direction: row-reverse;
 
@@ -188,6 +193,7 @@ body {
       color: #fff;
       text-decoration: none;
       font-size: 1.7rem;
+      margin: 0 auto;
     }
 
     a:hover {
@@ -196,32 +202,140 @@ body {
   }
 }
 header {
-	.flex-row;
-	flex-direction: row-reverse;
-  height: 45vh;
-	width: 100%;
-	
-	.quick-bio {
-		width: 50%;
+  .flex-row;
+  flex-direction: row-reverse;
+  height: auto;
+  width: 90%;
+  border-bottom: 1px solid #fff;
+  margin: 0 auto;
 
-		p {
-			width: 100%;
-			font-size: 2rem;
-			line-height: 1.3;
-		}
+  .quick-bio {
+    width: 50%;
 
-	}
+    p {
+      width: 100%;
+      font-size: 2rem;
+      line-height: 2;
+      padding-right: 6%;
+    }
+  }
 
-	img {
-		width: 60%;
-		height: auto;
-		border: 1px solid #fff;
-		
-	}
-	
+  .bio-img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    img {
+      width: 60%;
+      height: auto;
+      border: 1px solid #fff;
+      margin: 10% auto 5%;
+    }
+
+    h1 {
+      font-size: 4rem;
+    }
+
+    h2 {
+      font-size: 2rem;
+      margin-bottom: 5%;
+    }
+  }
 }
 
-	
-	
-  
+.goals {
+  font-size: 2rem;
+  line-height: 1.3;
+  width: 90%;
+  margin: 1% auto 0;
+  padding: 7%;
+  border-bottom: 1px solid #fff;
 
+  a {
+    text-decoration: none;
+    color: #000;
+  }
+
+  .button {
+    border: 1px solid #fff;
+    width: 25%;
+    text-align: center;
+    padding: 1% 0;
+    margin-top: 3%;
+  }
+}
+
+.skills-section {
+  .flex-row();
+  justify-content: space-between;
+  width: 90%;
+  margin: 1% auto 10%;
+  font-size: 2rem;
+  line-height: 1.4;
+  border-bottom: 1px solid #fff;
+  padding: 7%;
+
+  .about-skills {
+    width: 50%;
+    padding-right: 6%;
+  }
+
+  h2 {
+    font-size: 2.7rem;
+    margin-bottom: 2%;
+  }
+
+  ul {
+    width: 50%;
+  }
+
+  .flex-list ul,
+  li,
+  img {
+    display: inline;
+  }
+
+  img {
+    width: 7%;
+    padding-left: 2%;
+  }
+}
+
+.work-history {
+  h2 {
+    font-size: 3rem;
+    margin: 0 auto 2%;
+    width: 80%;
+  }
+
+  table {
+    width: 80%;
+    margin: 0 auto 5%;
+    border-collapse: collapse;
+    font-size: 1.6rem;
+  }
+
+  td,
+  th {
+    border: 1px solid #fff;
+    text-align: left;
+    padding: 3%;
+  }
+
+  tr:nth-child(even) {
+    .header-footer();
+    color: @font-color;
+  }
+}
+
+footer {
+  width: 100%;
+  .header-footer();
+
+  p {
+    color: #fff;
+    padding: 5%;
+    text-align: center;
+    font-size: 1.5rem;
+  }
+}
