--- a/css/index.css
+++ b/css/index.css
@@ -140,8 +140,8 @@ table {
   font-display: swap;
   src: local('Raleway'), local('Raleway-Regular'), url(https://fonts.gstatic.com/s/raleway/v14/1Ptug8zYS_SKggPNyC0ISg.ttf) format('truetype');
 }
-.body-font {
-  font-family: "Raleway", sans-serif;
+.border {
+  border-bottom: 1px solid #fff;
 }
 .header-footer {
   background: #171a21;
@@ -173,6 +173,12 @@ body {
   align-items: center;
   flex-direction: row-reverse;
 }
+@media (max-width: 500px) {
+  .nav-logo {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
 .nav-logo img {
   width: 100px;
   height: 100px;
@@ -183,11 +189,22 @@ body {
   align-items: center;
   width: 40%;
 }
+@media (max-width: 500px) {
+  .nav-logo .nav {
+    width: 100%;
+  }
+}
 .nav-logo .nav a {
   color: #fff;
   text-decoration: none;
   font-size: 1.7rem;
   margin: 0 auto;
+}
+@media (max-width: 500px) {
+  .nav-logo .nav a {
+    font-size: 1.3rem;
+    margin-bottom: 3%;
+  }
 }
 .nav-logo .nav a:hover {
   color: #daa520;
@@ -202,14 +219,31 @@ header {
   border-bottom: 1px solid #fff;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  header {
+    flex-direction: column-reverse;
+  }
+}
 header .quick-bio {
   width: 50%;
+}
+@media (max-width: 500px) {
+  header .quick-bio {
+    width: 95%;
+  }
 }
 header .quick-bio p {
   width: 100%;
   font-size: 2rem;
   line-height: 2;
   padding-right: 6%;
+}
+@media (max-width: 500px) {
+  header .quick-bio p {
+    font-size: 1.5rem;
+    padding: 8%;
+    line-height: 1.2;
+  }
 }
 header .bio-img {
   display: flex;
@@ -219,7 +253,7 @@ header .bio-img {
 header .bio-img img {
   width: 60%;
   height: auto;
-  border: 1px solid #fff;
+  border-bottom: 1px solid #fff;
   margin: 10% auto 5%;
 }
 header .bio-img h1 {
@@ -229,6 +263,12 @@ header .bio-img h2 {
   font-size: 2rem;
   margin-bottom: 5%;
 }
+@media (max-width: 500px) {
+  header .bio-img h2 {
+    text-align: center;
+    font-size: 1.5rem;
+  }
+}
 .goals {
   font-size: 2rem;
   line-height: 1.3;
@@ -236,6 +276,12 @@ header .bio-img h2 {
   margin: 1% auto 0;
   padding: 7%;
   border-bottom: 1px solid #fff;
+}
+@media (max-width: 500px) {
+  .goals {
+    font-size: 1.5rem;
+    padding: 8%;
+  }
 }
 .goals a {
   text-decoration: none;
@@ -247,6 +293,12 @@ header .bio-img h2 {
   text-align: center;
   padding: 1% 0;
   margin-top: 3%;
+}
+@media (max-width: 500px) {
+  .goals .button {
+    font-size: 1.5rem;
+    width: 95%;
+  }
 }
 .skills-section {
   display: flex;
@@ -260,9 +312,23 @@ header .bio-img h2 {
   border-bottom: 1px solid #fff;
   padding: 7%;
 }
+@media (max-width: 500px) {
+  .skills-section {
+    font-size: 1.5rem;
+    padding: 8%;
+    flex-direction: column;
+  }
+}
 .skills-section .about-skills {
   width: 50%;
   padding-right: 6%;
+}
+@media (max-width: 500px) {
+  .skills-section .about-skills {
+    font-size: 1.5rem;
+    margin-bottom: 5%;
+    width: 95%;
+  }
 }
 .skills-section h2 {
   font-size: 2.7rem;
@@ -310,4 +376,9 @@ footer p {
   padding: 5%;
   text-align: center;
   font-size: 1.5rem;
+}
+@media (max-width: 500px) {
+  footer p {
+    font-size: 1.7rem;
+  }
 }
