--- a/less/index.less
+++ b/less/index.less
@@ -138,9 +138,10 @@ table {
 }
 
 @import url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
+
 // mixins
-.body-font {
-  font-family: "Raleway", sans-serif;
+.border {
+  border-bottom: 1px solid #fff;
 }
 
 .header-footer {
@@ -156,6 +157,7 @@ table {
 // variables
 @main-bg: #617073;
 @font-color: #fff;
+@font-type: "Raleway", sans-serif;
 
 html {
   font-size: 62.5%;
@@ -164,7 +166,7 @@ html {
 html,
 body {
   height: 100%;
-  .body-font();
+  font-family: @font-type;
   background: #7a93ac;
 }
 
@@ -180,6 +182,11 @@ body {
   .flex-row();
   flex-direction: row-reverse;
 
+  @media (max-width: 500px) {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
   img {
     width: 100px;
     height: 100px;
@@ -189,11 +196,20 @@ body {
     .flex-row();
     width: 40%;
 
+    @media (max-width: 500px) {
+      width: 100%;
+    }
+
     a {
       color: #fff;
       text-decoration: none;
       font-size: 1.7rem;
       margin: 0 auto;
+
+      @media (max-width: 500px) {
+        font-size: 1.3rem;
+        margin-bottom: 3%;
+      }
     }
 
     a:hover {
@@ -206,17 +222,31 @@ header {
   flex-direction: row-reverse;
   height: auto;
   width: 90%;
-  border-bottom: 1px solid #fff;
+  .border();
   margin: 0 auto;
+
+  @media (max-width: 500px) {
+    flex-direction: column-reverse;
+  }
 
   .quick-bio {
     width: 50%;
+
+    @media (max-width: 500px) {
+      width: 95%;
+    }
 
     p {
       width: 100%;
       font-size: 2rem;
       line-height: 2;
       padding-right: 6%;
+
+      @media (max-width: 500px) {
+        font-size: 1.5rem;
+        padding: 8%;
+        line-height: 1.2;
+      }
     }
   }
 
@@ -228,7 +258,7 @@ header {
     img {
       width: 60%;
       height: auto;
-      border: 1px solid #fff;
+      .border();
       margin: 10% auto 5%;
     }
 
@@ -239,6 +269,11 @@ header {
     h2 {
       font-size: 2rem;
       margin-bottom: 5%;
+
+      @media (max-width: 500px) {
+        text-align: center;
+        font-size: 1.5rem;
+      }
     }
   }
 }
@@ -249,7 +284,12 @@ header {
   width: 90%;
   margin: 1% auto 0;
   padding: 7%;
-  border-bottom: 1px solid #fff;
+  .border();
+
+  @media (max-width: 500px) {
+    font-size: 1.5rem;
+    padding: 8%;
+  }
 
   a {
     text-decoration: none;
@@ -262,6 +302,11 @@ header {
     text-align: center;
     padding: 1% 0;
     margin-top: 3%;
+
+    @media (max-width: 500px) {
+      font-size: 1.5rem;
+      width: 95%;
+    }
   }
 }
 
@@ -272,12 +317,24 @@ header {
   margin: 1% auto 10%;
   font-size: 2rem;
   line-height: 1.4;
-  border-bottom: 1px solid #fff;
+  .border();
   padding: 7%;
+
+  @media (max-width: 500px) {
+    font-size: 1.5rem;
+    padding: 8%;
+    flex-direction: column;
+  }
 
   .about-skills {
     width: 50%;
     padding-right: 6%;
+
+    @media (max-width: 500px) {
+      font-size: 1.5rem;
+      margin-bottom: 5%;
+      width: 95%;
+    }
   }
 
   h2 {
@@ -337,5 +394,9 @@ footer {
     padding: 5%;
     text-align: center;
     font-size: 1.5rem;
+
+    @media (max-width: 500px) {
+      font-size: 1.7rem;
+    }
   }
 }
